		Add KER & Mechjeb to KSP9000
		Add TexturesUnlimited patch thanks to @MeCripp

	Fixed typo in Farscape patch

0.1.4
	Added NAU's Orgami Antennas
	Updated tech nodes for Farscape craft, both stock and CTT, thanks to forum user @Murdabenne

0.1.4.1
	Updated description of the Taurus Nuclear Engine

0.1.4.2
	updated ISP of the chemical part of the Taurus Nuclear engine to match the
	ISP of the Twitch engine
	updated maxthrust of the chemical parts to equal 4 Twitch engines

0.1.4.3
	Fixed syntax error in PatchManager files
	Add optional patch to convert the chemical engines of the Taurus Nuclear engine back to nuclear
	Updated maxthrust of the chemical part to be larger, since the engines are
	larger than the Twitch engine

0.1.4.4
	Thanks to forum user @Munar Industries, the TaurusHCV has been fixed and
	upgraded with external lighting for the windows and language localization
	for the controls

0.1.4.5
	Added German Translation, thanks to forum user @LeLeon
	Updated .version file to allow all 1.4.1+

0.1.4.6
	Fixed extra .version files
	
0.1.4.7
	Version bump for 1.5 
	
0.1.5
	Added missing bulkheadProfiles
	
0.1.6
	Thanks to forum user @Tonka Crash for these:
		Fixes the RSCapsuledyne TaurusScienceBay (change scienceMultiplier from 5.5 to 6)
		Fixes the RSCapsuledyne Agents.cfg (added title,  fixed URLs)
		Added patch for when IndicatorLights is installed 
        
0.1.6.1
    Fixed error in part name caused by forum filters

0.2.0
	Thanks to @Jognt for this:
		Hide the IntakeAtm resource.
	Updated to KSP 1.8

0.2.0.1
	Updated antenna values for the two NAU antennas to bring them in line with
	other antenna values

0.2.0.2
	Fixed bulkheadProfile in the bahaMk2LightningCockpit

0.2.0.3
	Adjusted drag cubes in the Mk2Essentials:  sAS, serarator & decoupler
	Adjusted maxTemp in all Mk2Essentials to 2500 to match stock


0.2.1
	Added Mk22 Cockpits from user @BahamutoD
		Added tags to cockpits
		Cleaned up formatting 
		Updated code for KSP 1.8+