@@ -56,6 +56,12 @@
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
+    <Compile Include="AssemblyVersion.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>AssemblyVersion.tt</DependentUpon>
+    </Compile>
+    <Compile Include="InstallChecker.cs" />
     <Compile Include="Mk22HUD.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils.cs" />
@@ -80,6 +86,10 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="AssemblyVersion.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>AssemblyVersion.cs</LastGenOutput>
+    </Content>
     <Content Include="Distribution\GameData\BDMk22\ChangeLog.txt" />
     <Content Include="Distribution\GameData\BDMk22\License.txt" />
     <Content Include="Distribution\GameData\BDMk22\Parts\mk22cockpit\normalMap_NRM.dds" />
@@ -116,6 +126,9 @@
   <ItemGroup>
     <Folder Include="Distribution\GameData\BDMk22\Plugins\" />
   </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
   <PropertyGroup>
     <PostBuildEvent>
 set KSPDIR=$(KSPDIR)
@@ -142,7 +155,7 @@ if $(ConfigurationName) == Release (
   </PropertyGroup>
   <PropertyGroup>
     <PreBuildEvent>
-rem "$(DevEnvDir)\texttransform.exe" "$(ProjectDir)AssemblyVersion.tt"</PreBuildEvent>
+"$(DevEnvDir)\texttransform.exe" "$(ProjectDir)AssemblyVersion.tt"</PreBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
