@@ -29,6 +29,6 @@ using System.Runtime.InteropServices;
 //      Build Number
 //      Revision
 //
-[assembly: AssemblyVersion("1.6.1")]
+//[assembly: AssemblyVersion("1.6.1")]
 [assembly: AssemblyFileVersion("1.6.1")]
 
